# preon-systems-cell-v2

./: .env.example  .gitignore  README.md  biological_implementation_summary.md  main.py  pyproject.toml  run-web.bat  universe.txt
docs/: bi-exports.md  bones-and-llm-routing.md  deployment.md  dev-setup.md  implementation-roadmap.md  potential_issues_core.md  potential_issues_exports.md  potential_issues_future.md  potential_issues_metabolism.md  repo-rules.md  v1-features.md  v2-features.md  v3-features.md
docs/deployment/: aws.md  azure.md  blended.md  gcp.md
docs/llm-proteins/: 00-index.md  01-introduction.md  02-definitions.md  03-system-overview.md  04-protein-architecture.md  05-model-interface-layer.md  06-concurrency-execution.md  07-network-efficiency.md  08-intra-cell-communication.md  09-intra-tissue-communication.md  10-inter-tissue-communication.md  11-organ-coordination.md  12-collective-intelligence.md  13-task-decomposition-orchestration.md  14-consensus-conflict-resolution.md  15-memory-state-management.md  16-failure-resilience.md  17-observability-telemetry.md  19-example-flows.md  (+3 more)
frontend/: next.config.ts  package-lock.json  package.json
preon_systems_cell/: __init__.py  api.py  artifacts.py  auth.py  cli.py  email.py  email_setup.py  engine.py  llm_providers.py  models.py  organelles.py  rate_limit.py  scenario.py  web.py
scenarios/: default_cell.yaml
tests/: test_analytics_features.py  test_api.py  test_bi_exports.py  test_engine.py  test_postgres_persistence.py  test_routing.py  test_storage_manager.py  test_validation.py  test_web.py
(+121 files in other folders)
