[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["preon_systems_cell*"]

[tool.setuptools.package-data]
preon_systems_cell = ["static/*", "static/vendor/*", "storage/sql/*.sql", "bones/defaults.yaml"]

[project]
name = "preon-systems-cell"
version = "0.1.0"
description = "Deterministic organism runtime for the Cell Survival Requirements architecture."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=23.1",
    "Authlib>=1.3",
    "email-validator>=2.2",
    "fastapi>=0.115",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "uvicorn>=0.30",
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "httpx>=0.27",
    "pytest>=8.0",
]
postgres = [
    "asyncpg>=0.29",
]
anthropic = [
    "anthropic>=0.40",
]
openai = [
    "openai>=1.50",
]
gemini = [
    "google-generativeai>=0.8",
]
# grok uses the openai SDK with base_url=https://api.x.ai/v1 — pip install preon-systems-cell[openai]
llm = [
    "anthropic>=0.40",
    "openai>=1.50",
    "google-generativeai>=0.8",
]

[project.scripts]
organism = "preon_systems_cell.cli:main"
organism-web = "preon_systems_cell.web:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
